[gd_scene load_steps=23 format=2]

[ext_resource path="res://Interface/Health/EnemyHealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/Health/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Enemies/Zombie.gd" type="Script" id=3]
[ext_resource path="res://art/enemies/Skull/skull_2.png" type="Texture" id=4]
[ext_resource path="res://art/enemies/Skull/skull_1.png" type="Texture" id=5]
[ext_resource path="res://art/enemies/Skull/skull_dash2.png" type="Texture" id=6]
[ext_resource path="res://art/enemies/Skull/skull_3.png" type="Texture" id=7]
[ext_resource path="res://art/enemies/Skull/skull_dash1.png" type="Texture" id=8]
[ext_resource path="res://art/enemies/Skull/skull_dash3.png" type="Texture" id=9]
[ext_resource path="res://art/enemies/Skull/skull_4.png" type="Texture" id=10]
[ext_resource path="res://art/Flash.tres" type="Shader" id=11]
[ext_resource path="res://art/enemies/Zombie/zombie.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": false,
"name": "dash",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 71, 75.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 70, 76.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 2733.64

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/hit_opacity = 0.0

[sub_resource type="Animation" id=10]
resource_name = "Walk"
length = 0.666667
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "dash"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Zombie" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -20 )
scale = Vector2( 3.5, 3.5 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Health" parent="." instance=ExtResource( 2 )]
max_health = 15

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = -48.0
margin_top = -127.0
margin_right = 52.0
margin_bottom = -107.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -13.5 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -12.5 )
shape = SubResource( 3 )

[node name="Damaged" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DetectionRadius" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
visible = false
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( -1, -19 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 12 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 10 )
anims/dash = SubResource( 6 )
anims/idle = SubResource( 5 )

[node name="FlashPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/hit = SubResource( 9 )

[node name="Regen" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="dead" from="Health" to="." method="_on_Health_dead"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Damaged" to="." method="_on_Damaged_timeout"]
[connection signal="area_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_area_entered"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_DetectionRadius_body_exited"]
[connection signal="timeout" from="Regen" to="." method="_on_Regen_timeout"]
